@@ -1,3 +1,3 @@
-EBUILD clementine-9999.ebuild 3614 RMD160 95172d0c16ce60554f11431490ead08da57bdaa1 SHA1 d55e558da8adce0fbf9655f2371082c6187c4a9d SHA256 39b8bf792db129d3eced0e089c0b12e28c0c1d8c762490279a11e4836c521663
-MISC ChangeLog 3267 RMD160 e329d64e6071430345527322537af5253a5eb6db SHA1 3cab54d88f26be29c1a1d45cede9de78fc6e2271 SHA256 c994e4d5f428bb50ef2340cba942b05fc6ae054b1bb89ce9c970195abad82661
+EBUILD clementine-9999.ebuild 3363 RMD160 9053d7690efdb179d6d4bb8782409bdd469d0cb6 SHA1 f84d269b3af6ce2dc3cc8dbaa4ffacaca44f5ff7 SHA256 1a955eea385f4b27aef56103022d6b4e582a541566baa071c7401d575fd36632
+MISC ChangeLog 3363 RMD160 3bbd791b9d162e3faa74bdb7f707b8bc32c645cb SHA1 5149c15eb2e1c733f148d1cca339f912e951c0bc SHA256 2315d5a81cd5476cb34d0aa5542b7f6ef26af99fdb426b2801ef122c559a5d57
 MISC metadata.xml 846 RMD160 efba04b7a71123cb465b1e75127a4797f2013054 SHA1 3d1c647414f3d0c4bf97b725bac4cea2cffeebca SHA256 6a27a34ca5039ac9471a4e40cb84f9ed4169074d6d3a8a94f926f188f5e1350a
