@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 Mar 2011; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild:
+  upstream fixed most tests
+
   09 Mar 2011; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild:
   update deps, add tests
 
